<resources>
    <string name="app_name">Mobile development App</string>

    <string name="hello_blank_fragment">Not yet :(</string>
    <string name="production">Production:\u0020</string>
    <string name="type">Type:\u0020</string>
    <string name="movie_poster">Movie Poster </string>
    <string name="title">Title:\u0020</string>
    <string name="director">Director:\u0020</string>
    <string name="genre">Genre:\u0020</string>
    <string name="writer">Writer:\u0020</string>
    <string name="released">Released:\u0020</string>
    <string name="year">Year:\u0020</string>
    <string name="imdb_id">imdb ID:\u0020</string>
    <string name="rated">Rated:\u0020</string>
    <string name="running_time">Running time:\u0020</string>
    <string name="actors">Actors:\u0020</string>
    <string name="plot">Plot:\u0020</string>
    <string name="language">Language:\u0020</string>
    <string name="country">Country:\u0020</string>
    <string name="awards">Awards:\u0020</string>
    <string name="rating">Rating:\u0020</string>
    <string name="votes">Votes:\u0020</string>
    <string name="title_activity_draw">DrawActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>